feat(weapons): 特效优化与数值调整检查点——拖尾自选 RGB、ConeImpactVfx 参数化、充能武器辐能列修复
- 弹体拖尾 tailHue 改自选 RGB tailColor（paleGreenTail/emberRedTail 预设），SKILL 同步
- ConeImpactVfx 扭曲时序/大小与三角碎片数量参数化（DistortionSpec/ShardCountSpec），设计文档 v4.5
- 重型离子脉冲更名彗星冲击波：伤害 250/EMP 750/辐能 275、8/5s 回充 24 弹匣、0.15s 开火间隔；电弧起点改弹着点
- 电针族精度对齐原版针刺（中等）；穷距相位轨道炮 1s 充能 + 1s 冷却
- 充能武器 energy/second 置 0（原版口径）：修复 ChargeFireTracker 充能期按秒真实扣辐导致实际辐能超面板（穷距 900→1350）
- WeaponAmbientGlowManager 武器常驻发光（贴图预加载修复）；15 件 .wpn 补 muzzleFlashSpec
- 新 SKILL：texture-loading-guidelines；JBR runGame 环境（starsector.javaVendor=jetbrains）
- 武器 glow/ambient 贴图与美术需求文档更新